--- a/ÉttermiSzoftver/ÉttermiSzoftver.csproj
+++ b/ÉttermiSzoftver/ÉttermiSzoftver.csproj
@@ -55,6 +55,18 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="ucFelvetel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ucFelvetelEtel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ucLogin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="wndLogin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -66,6 +78,15 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ucFelvetel.xaml.cs">
+      <DependentUpon>ucFelvetel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ucFelvetelEtel.xaml.cs">
+      <DependentUpon>ucFelvetelEtel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ucLogin.xaml.cs">
+      <DependentUpon>ucLogin.xaml</DependentUpon>
     </Compile>
     <Compile Include="wndLogin.xaml.cs">
       <DependentUpon>wndLogin.xaml</DependentUpon>
